<resources>
    <string name="app_name">FT Management System</string>
    <string name="action_settings">Settings</string>
    <string name="newStaff_Hint"> Name </string>
    <string name="newStaff_Label"> Name </string>
    <string name="addStaff_Button"> Add Staff </string>
    <string name="newRole_Hint"> Role </string>
    <string name="newRole_Label"> Role? </string>
    <string name="addRole_Button"> Add Role </string>
    <string name="newShift_Label"> New Shift </string>
    <string name="newShift_Hint"> Shift Day </string>
    <string name="addShift_Button"> Add Shift </string>
    <string name="newDate_Label"> Date </string>
    <string name="newDate_Sample"> 01-01-2016 </string>
    <string name="newStartTime_Label"> Start Time </string>
    <string name="newStartTime_Sample"> 12:00 </string>
    <string name="newEndTime_Label"> End time </string>
    <string name="newEndTime_Sample"> 1:00 </string>
    <string name="removeStaff_Label"> Remove Staff </string>
    <string name="staffmanager_Label">Staff Management</string>
    <string name="shift_Label">Shift</string>
    <string name="AddStafftoShift">Assign Staff to Shift</string>
    <string name="RemoveStafffromShift">Remove Staff from Shift</string>
    <string name="removeShift_Label">Remove Shift</string>
    <string name="newStaff">NEW STAFF</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="newSupply">New Supply</string>
    <string name="createSupply">ADD</string>
    <string name="supplyQuantity">Quantity</string>
    <string name="removeSupply">Remove</string>
    <string name="supplySpinnerLabal">Supply</string>
    <string name="addtoSupplyInventory">Add to Inventory</string>
    <string name="removeFromeSupplyInventory">Remove from Inventory</string>
    <string name="newEquipent_Hint">Equipment</string>
    <string name="Equipment">Equipment</string>
    <string name="newSupplyHint">Add Supply</string>
    <string name="newEquipment">Add Equipment</string>
    <string name="newBestBeforeDate">Expiration Date</string>
    <string name="equipmentSpinnerLable">Equipment</string>
    <string name="newEquipment_Hint">Add Equipment</string>
    <string name="newItemMEnu">New Item</string>
    <string name="MenuItem">MEnu</string>
    <string name="desc">Description</string>
    <string name="addItem">Add Item</string>
    <string name="itemSpinnerLabel">Item</string>
    <string name="removeItem">Remove</string>
    <string name="supplySpinn">Add supply to Item</string>
    <string name="addSupply">Add</string>
    <string name="Order">Order</string>
    <string name="selectITem">Select Item to order</string>
    <string name="delete">Delete Order</string>
    <string name="add_to_order">Order</string>
    <string name="addItemtoOrder">Add to order</string>
</resources>
